; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_log.c_print_signature.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_log.c_print_signature.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@signature = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [7 x i8] c"-- \0A%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @print_signature to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @print_signature(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i8*, i8** @signature, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i8*, i8** @signature, align 8
  %7 = load i8, i8* %6, align 1
  %8 = icmp ne i8 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %5, %1
  br label %29

10:                                               ; preds = %5
  %11 = load i32*, i32** %2, align 8
  %12 = load i8*, i8** @signature, align 8
  %13 = call i32 @fprintf(i32* %11, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %12)
  %14 = load i8*, i8** @signature, align 8
  %15 = load i8*, i8** @signature, align 8
  %16 = call i32 @strlen(i8* %15)
  %17 = sub nsw i32 %16, 1
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i8, i8* %14, i64 %18
  %20 = load i8, i8* %19, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp ne i32 %21, 10
  br i1 %22, label %23, label %26

23:                                               ; preds = %10
  %24 = load i32*, i32** %2, align 8
  %25 = call i32 @putc(i8 signext 10, i32* %24)
  br label %26

26:                                               ; preds = %23, %10
  %27 = load i32*, i32** %2, align 8
  %28 = call i32 @putc(i8 signext 10, i32* %27)
  br label %29

29:                                               ; preds = %26, %9
  ret void
}

declare dso_local i32 @fprintf(i32*, i8*, i8*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @putc(i8 signext, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
